<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:weightSum="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editRestName"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/restaurant_name"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.27"
            android:padding="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editRestCity"
                android:inputType="text"
                android:hint="@string/city"
                android:textAppearance="@style/TextAppearance.AppCompat" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.84"
            android:padding="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/editRestState"
                android:hint="@string/state"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />
        </TableRow>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/newRestSaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_menu_save"
        app:backgroundTint="@android:color/holo_green_dark" />

</android.support.design.widget.CoordinatorLayout>